--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,8 @@ body{
 .bg-col{
     background-color: #FFFFFF;
 }
+
+@keyframes scrollText {
+  0% { transform: translateX(-100%); }
+  100% { transform: translateX(100%); }
+}
